--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
