--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "axios": "^0.19.0",
         "chart.js": "3.3.2",
         "classnames": "^2.2.6",
+        "concurrently": "^8.0.1",
         "jquery": "^3.6.0",
         "primeflex": "3.1.0",
         "primeicons": "^5.0.0",
