--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "chart.js": "3.3.2",
         "classnames": "^2.2.6",
         "concurrently": "^8.0.1",
+        "date-fns": "^2.30.0",
         "jquery": "^3.6.0",
         "primeflex": "3.1.0",
         "primeicons": "^5.0.0",
